force-app/main/default/objects/CM_Meeting_Transcript__c/CM_Meeting_Transcript__c.object-meta.xml
<CustomObject>
    <label>Meeting Transcript</label>
    <nameField>
        <displayFormat>CMT-{000000}</displayFormat>
        <label>Transcript Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Transcripts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>