force-app/main/default/objects/CM_Meeting_Transcript__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>