force-app/main/default/objects/CM_Meeting_Transcript__c/fields/Counterparty_Account__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CounterpartyMeetingTranscripts</relationshipName>
    <type>Lookup</type>
</CustomField>