force-app/main/default/objects/CM_Meeting_Transcript__c/fields/Focus_Company__c.field-meta.xml
<CustomField>
    <fullName>Focus_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focus Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FocusMeetingTranscripts</relationshipName>
    <type>Lookup</type>
</CustomField>