force-app/main/default/objects/CM_Meeting_Transcript__c/fields/Prompt_Response__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Response__c</fullName>
    <label>Prompt Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>